# shell

./: .bazelrc  AGENTS.md  BUILD  CHANGELOG.md  MODULE.bazel  catalog-info.yaml
docs/: remote-build.md
docs/dependency-versioning/: index.md
githooks/: pre-commit
infrastructure/pulumi/repo_config/: Pulumi.yaml  README.md  go.mod  main.go
tools/format/: prettier_wrapper.sh
tools/patches/: rules_lint_rubocop_sarif.patch
tools/pulumi/: create_app.sh  pulumi_cmd.sh  pulumi_setup.sh
tools/remote/: setup.sh
tools/scripts/: copilot  gemini
